--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538214.md#1" target="_blank">王友群：香港“暴”、“乱”的根源在中共</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538214.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907280100291758-150x120.jpg" align ="left"></a>美国总统川普8月中旬多次发推文和接受记者采访，希望北京当局“人道地”解决香港问题，“不希望有人受伤，也不希望有人丧生”，同时，希望香港人能得到自由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 2:57 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538139.md#1" target="_blank">谭笑飞：香港商界被中共逼到了墙角</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538139.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/09/1308271347452441-150x120.jpg" align ="left"></a>在香港反送中运动中，冲在第一线的多是普通香港市民，但是他们维护的是全香港的法治和自由。每一个香港人都是受益者，而受益程度比较高的一个群体就是香港商界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 12:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537733.md#1" target="_blank">石铭：中秋月圆人难圆</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1907181540511973-150x120.jpg" align ="left"></a>中秋月圆人难圆。据明慧网近期报道，中秋节前后又有许多法轮功学员及他们的家庭遭中共摧残，有的被非法绑架、关押、判刑、甚至迫害致死。在此仅举几个迫害案例：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 5:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536833.md#1" target="_blank">陈思敏：中美重启副手级磋商“卡”在哪里</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/201905014-hsichiao-hk-01-150x120.jpg" align ="left"></a>在中美贸易谈判停摆近2个月后，9月19日至20日，中美副手级重启面对面磋商于华府先行登场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 8:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519733.md#1" target="_blank">周晓辉：北京十一前稳大陆稳美国香港的背后</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1166466908-150x120.jpg" align ="left"></a>一再宣称“理论自信，道路自信，制度自信”的北京当局，为了迎接中共“十一”大庆，却将自己发自内心的不自信彻底彰显出来。不仅北京风声鹤唳、草木皆兵，各地也都加大了“维稳”力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 4:08 PM			</td></tr>
@@ -15,19 +17,32 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535920.md#1" target="_blank">杨宁：胡锡进吐实话 如此迎十一让世界哂笑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535920.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1412230452072039-600x400-2-150x120.jpg" align ="left"></a>可是一个对于自己的道路、理论、制度有自信的政权，却防民甚于防川，害怕自己的人民到了极点。这哪里体现出来自信呢？体现的恰恰是不自信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 4:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535661.md#1" target="_blank">可心：从香港学生“生于乱世，有种责任”说起</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Screen_Shot_2019-09-13_at_11510_am@1200x1200-150x120.png" align ="left"></a>香港反送中运动持续了整整三个月，抗议者一直要求政府回应“五大诉求”，但港府至今除“撤回修例”外，仍不理会其它四项。自9月开学以来，中学生筑人链表达诉求活动遍地开花。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535332.md#1" target="_blank">张奂才：北京惊魂</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535332.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/EE4HL5gU4AAyKWj-150x120.png" align ="left"></a>中共“十一”阅兵在即，北京安保步步升级，此外，中共还要进行3次大演练，同时进行交通管制，封路、封地铁、公交车，有民众到了家门口却进不得，民众怨声四起，有人根据自己的经历写了一篇北京地铁惊魂，让不少北京人感同身受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 10:44 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank">罗琼:从港人遭遇看中共迫害法轮功的邪恶（1）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/falundafa-600x314-1-150x120.jpg" align ="left"></a>香港反送中运动发展至今仅仅100多天，足以折射出中共的邪恶本性，尤其是对追求“真、善、忍”的法轮功学员20年来惨绝人寰的迫害，以及它镇压民众采取的惊人相似的残暴手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 8:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank">罗琼：从港人遭遇看中共迫害法轮功的邪恶</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/falundafa-600x314-1-150x120.jpg" align ="left"></a>香港反送中运动发展至今仅仅100多天，足以折射出中共的邪恶本性，尤其是对追求“真、善、忍”的法轮功学员20年来惨绝人寰的迫害，以及它镇压民众采取的惊人相似的残暴手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 8:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534483.md#1" target="_blank">扬箭：中共正在把迫害法轮功的手段延用到香港</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534483.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908120442292378-150x120.jpg" align ="left"></a>香港，中国这块最后的、很少受党文化毒害的朴实纯洁地正在遭受中共的强暴污乱：中共造谣市民为恐怖分子、暴徒；造谣大学生为港独、乱港份子；把黑社会和警察扮成市民进行内部破坏；警察随意用杀伤性武器伤害和打死市民……这些手段和行为是不是很熟悉？没错，中共在二十年前迫害法轮功时也是这么造谣和随意打死人的。当时，中共就有内部文件说.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 7:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520386.md#1" target="_blank">李林一： 曾庆红“精英治港”路线或变</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520386.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-453638982-150x120.jpg" align ="left"></a>2003年，曾庆红成为中共港澳小组组长后，获得治港大权。在其一手壮大的“精英傀儡治港”思路下，再加上中共红色权贵家族、资金源源不断进入香港，使得香港房价飙升。目前来看，曾庆红的这个思路未来有将被习近平改变的可能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 5:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534404.md#1" target="_blank">程晓容：黄奇帆谈香港经济地位 潜台词透真相</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909011029151758-150x120.jpg" align ="left"></a>香港作为金融中心和自由港的成功，反衬出中共的失败。中共对香港的态度，是利用之后再破坏，一边破坏一边利用。它不能容忍香港保持自由度，不允许自由的风气向大陆传送。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534389.md#1" target="_blank">唐恩：莫待报应悔恨迟</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534389.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/0000-GettyImages-3294615-150x120.jpg" align ="left"></a>近日明慧网刊登了数则因为迫害法轮功而遭恶报的真实案例，发人省思。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 2:53 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534130.md#1" target="_blank">周晓辉：美台将联合举行网络攻防演练 威慑中共</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534130.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1506171318252741-600x400-150x120.jpg" align ="left"></a>据美国之音报导，美国在台协会(AIT)台北办事处处长郦英杰9月16日透露，美国今年11月将首次与台湾共同举行“网络攻防演练”，并集合至少15个国家，共同演练应对外来网路攻击和针对金融系统的黑客活动等问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 12:43 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533380.md#1" target="_blank">项云：三朝“元老”王沪宁，朝中无人“理不灵”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wang-1-1-1-1-150x120.jpg" align ="left"></a>中共三朝“元老”王沪宁，一个脱离生产劳动、脱离实业专门从事文字理论研究的人，其思想基础是“政治无对错”。在共产统治条件下，他与社会生产、企业管理、科学研究、社会管理等实际、实业工作者产生的思想和要求显然不会相同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 11:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533292.md#1" target="_blank">戈壁东：中共之恶远超纳粹</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190728150720100615-1-600x400-1-150x120.jpg" align ="left"></a>早在上世纪末，美国原国家安全顾问布热津斯基在他的《大失控与大混乱》一书中就提到过，共产主义和纳粹是20世纪世界灾难的根源。而这两者在本质上完全相同，它们都在社会主义的名义下推行极端主义的罪恶意识形态。
-
-纳粹在上一世纪中期已经被自由世界彻底击败并清除。而共产主义在上世纪末也在全球全面崩溃。中共及其附庸的北朝鲜金家王.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:27 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531293.md#1" target="_blank">程晓容：香港三项活动取消 中共十一添堵</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/20190726-HUAMING-HONGKONG-03-150x120.jpg" align ="left"></a>三个活动在香港被取消，发出同一个信号：中共自讨没趣，亲共者自取其辱。在香港风暴中，正邪分明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 6:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532002.md#1" target="_blank">陈思敏：中共“十一”猪荒危机难过</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/20150064-150x120.jpg" align ="left"></a>中共文宣系统去年就开始宣传将以“经济成果”庆祝建政70年，但今年Q2的GDP创1992年Q1以来最低增速，更有始料未及的猪荒危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 5:13 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531935.md#1" target="_blank">横河：重重危机之下中共能否摆脱70年大限魔咒</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531935.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/henhe1-600x400-1-1-150x120.jpg" align ="left"></a>今天是中秋佳节，我们首先祝听众朋友们中秋快乐、阖家团圆。接下来的10月1日是中共篡政70周年的纪念，会在这一天营造一个普天同庆的假象，中共祭出了“胡萝卜加大棒”的策略，“大棒”就是各级政府高度戒备进入临战状态，这个跟往年也差不多少；“胡萝卜”就是北京不惜降准来刺激股市，安抚股民的情绪；对外又向美国放软身段，缓和紧张气氛.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 4:08 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538169.md#1" target="_blank">福瑞德：探寻中国百年历史的真相</a><br></h3>我是一个平民，生长于中国大陆的农村，是无党无派无组织的自由人。现实中我是理工男，没有文史政治的专业教育背景。因为父母早已逝去，我也自嘲是一个孤儿，现正流浪于海外，一个失去父母的儿子在远离祖国的时刻，其实也有很多惆怅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 12:55 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538127.md#1" target="_blank">陈达：警治港致党完蛋</a><br></h3>反反送中警主演，港警亮相众瞪眼。
+浑身解数六四术，迫害大法一辙线。
+施暴反诬受害暴，嫁祸犹装被枉冤。
+大陆国安警匪混，不过传帮带之谈。
+三尺冰非一日寒，警队制度早崩盘。
+退休港警揭谜底①，谜底背后有何瞒？
+最终目的毁灭人，毁人不倦党祸源②。
+百年红潮血海漫，一路暴恐一路骗。
+声言五十年不变，承诺作饵党习.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 11:48 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537810.md#1" target="_blank">李春草：和蔡奇送“十·一 ”</a><br></h3>忐忐党国心，忑忑权贵膺
+道道不自信，理理论不清
+鸽鸽不许飞，刀刀下架寝
+敏敏感人盯，维维权士喑
+脸脸识恐慌，警警枪上膛
+店店都打烊，气气球难放
+无无人机藏，虚虚拟关网
+邮邮禁航空，闹闹钟不嗡
+香香港不静，贸贸战涌汹
+惶惶末日景，凄凄似送终......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 6:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537765.md#1" target="_blank">吕锡民：增强型地热系统（EGS）的诱震探讨</a><br></h3>为了在商业规模上经济有效生产地热能，在目标地下的热岩层中必须存在足够的流体和渗透性。在许多情况下，地热储层需要增加渗透性和/或流体含量，亦即创建所谓的增强型地热系统（Enhanced Geothermal System, EGS）。与增强型地热系统（EGS）相关的问题之一是地下水库的产生或性质改善以及随后的地热能提取（.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 6:32 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537669.md#1" target="_blank">李小刚：中共的反人类实验何时休？！</a><br></h3>中共为了研发脑控科技，从上世纪60年代初到现在，已经50多年了，从最初的姜堪政的思维传递实验，到文革中利用脑控设备进行政治审查，再到八、九十年代的以研究气功，特异功能和人体科学为幌子的实验，直至1996年中国加入人类脑计划至今，中共的脑控研究从来就没有停止过，但是由于中共强有力的保密工作，再加上中共不断的蓄意掩盖和歪曲.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 4:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537199.md#1" target="_blank">王赫：中共如何蚕食“战略性”民企</a><br></h3>9月10日，马云“（被）交班”。10天之内，中国互联网“双马”之另一“马”——马化腾，也不再担任腾讯征信法定代表人，并卸任执行董事。如果说“双马”相继走下前台是偶然事件，恐怕没几人相信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 9:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536750.md#1" target="_blank">吐为快：赵家的爱国主义</a><br></h3>党家仇恨琵琶遮，常弹爱国妆颜色；
